--- a/index.html
+++ b/index.html
@@ -1,13 +1,332 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>  
-    <meta charset="utf-8" />
-    <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
-    <title>Лабораторная работа 5</title>
-    <link rel="stylesheet" href="https://www.x3dom.org/download/x3dom.css" />
-    <script src="https://www.x3dom.org/download/x3dom.js"></script>
-  </head>
-  <body>
-    <h1>Здесь только я. А должна быть твоя лаба!</h1>
-  </body> 
+<head>
+  <meta charset="utf-8" />
+  <title>4laba</title>
+  <link rel="stylesheet" href="https://www.x3dom.org/download/dev/x3dom.css" />
+  <script src="https://www.x3dom.org/download/dev/x3dom-full.js"></script>
+</head>
+<body>
+  <h1>Лаба 4</h1>
+  <X3D id="x3d" xmlns="https://www.x3dom.org/x3dom" style="width:1600px; height:500px">
+    <Scene>
+      <Background backUrl="back.jpg" bottomUrl="bot.jpg" 
+      frontUrl="front.jpg" leftUrl="left.jpg" 
+      rightUrl="right.jpg" topUrl="top.jpg"></Background>
+      <PointLight location="0 0 0" color="0 1 1" intensity="0.01" shadowIntensity="0.8" shadowMapSize="2000"></PointLight>
+      <NavigationInfo avatarSize="0.25 1.6 0.7" type="FLY" speed="2"></NavigationInfo>
+      <Transform  rotation="1 0 0 0.7">
+      <Transform rotation="0 0 1 0.2" translation="-3.5 4.5 5">
+      <Transform DEF="TransBox"  rotation="0 0 1 -1.57" scale=".2 .2 .2">
+        <Shape>
+          <Appearance>
+            <ImageTexture url="ufo.jpg">
+            </ImageTexture> 
+            <Material></Material>
+          </Appearance>
+          <SolidOfRevolution angle='7' crossSection='[0 2 0.5 4 1.5 1.5 1.5 0.5]' solid='false'></SolidOfRevolution> 
+        </Shape>
+       </Transform>
+      <Transform DEF="Tp" scale="0.2 0.2 0.2" translation="-.5 0 0">
+        <Inline DEF="tea" url="teapot.x3d"></Inline>
+      </Transform>
+      <Transform DEF="Tp1" scale="0.2 0.2 0.2" translation=".5 0 0" rotation="0 1 0 3.14">
+        <Shape USE="tea"></Shape>
+      </Transform>
+      <Transform DEF="Tp2" scale="0.2 0.2 0.2" translation="0 0 -.5" rotation="0 1 0 -1.57">
+        <Shape USE="tea"></Shape>
+      </Transform>
+      <Transform DEF="Tp3" scale="0.2 0.2 0.2" translation="0 0 .5" rotation="0 1 0 1.57">
+        <Shape USE="tea"></Shape>
+      </Transform>
+       <Transform DEF="TransBox" scale="1.5 0.5 1.5">
+        <Shape>
+          <Appearance>
+            <ImageTexture url="nlo.jpg">
+            </ImageTexture> 
+            <TextureTransform scale="2 2">
+            </TextureTransform>
+            <Material></Material>
+          </Appearance>
+          <Sphere radius="0.2" >
+          </Sphere>
+        </Shape>
+      </Transform>
+      </Transform>
+    </Transform>
+      <TimeSensor DEF="TimeBox" cycleInterval="5" loop="true"></TimeSensor>
+      <PositionInterpolator DEF='PosIntBoxSCALE' key='0 0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1' keyValue='2 1 2, 1 1 3, 1 1 2, 3 1 1, 3 1 2, 2 1 3, 2 1 1, 3 1 3, 1 1 3, 3 1 1, 2 1 2'></PositionInterpolator>
+      <ROUTE fromNode="TimeBox" fromField="fraction_changed" toNode="PosIntBoxSCALE" toField="set_fraction"></ROUTE>
+      <ROUTE fromNode="PosIntBoxSCALE" fromField="value_changed" toNode="TransBox" toField="set_scale"></ROUTE>
+    <Transform rotation="0 1 0 0.5">
+    <Transform scale="0.00000006 0.00000004 0.00000003" rotation="0 0 1 0.5" translation="1 1 7">
+    <Shape>
+      <Appearance>
+        <ImageTexture url="asteroid.jpg">
+            </ImageTexture> 
+        <Material></Material>
+      </Appearance>
+      <GeoElevationGrid geoGridOrigin='-90 -180 0' xDimension='21' xSpacing='18' yScale='200' zDimension='11' zSpacing='18'   height='676 41 972 660 801 370 677 848 158 342 0 590 0 493 0 901 0 0 0 586 0 0 0 82 722 0 0 616 0 0 592 0 0 135 976 529 135 449 899 190 375 0 0 -986 0 0 153 0 423 0 0 747 0 0 691 452 0 0 557 0 0 952 0 0 722 128 0 962 0 101 25 836 595 0 899 661 620 96 826 0 303 397 172 0 232 2 50 2 4 32 1 142 792 0 122 0 969 745 0 123 0 792 495 276 472 915 292 193 822 750 616 320 46 60 988 460 895 588 275 767 701 922 921 449 34 855 548 992 919 606 675 574 693 551 726 941 301 601 837 627 0 880 0 0 0 0 0 0 0 0 0 202 1 0 0 0 0 1241 385 6 582 468 215 201 529 0 0 0 0 0 0 0 304 427 365 374 0 0 0 977 345 22 132 325 272 256 171 0 0 0 0 706 896 464 134 471 126 563 245 767 489 143 11 784 88 498 307 108 707 68 9 339 958 361 950 246 600 378 378 339 254 314 980 434 158 698 690 235 376 22 856'/>
+    </Shape> 
+    </Transform>
+    </Transform>
+    <!--treugolnik-->
+    <TimeSensor DEF="Time"cycleInterval="5"loop="true"></TimeSensor>
+    <CoordinateInterpolator DEF="CoordInt"key="0 0.5 1"keyValue="1 0 0, 1 2 1, 0 0 1,
+                                                                 0 0 1, 1 0 0, 1 2 1,
+                                                                 0 0 0, 0 0 0, 2 0 0,
+                                                                 1 2 1, 0 0 0, 0 0 0,
+                                                                 2 0 0, 1 2 1, 0 0 0,
+                                                                 0 0 0, 2 0 0, 1 2 1,
+                                                                 0 0 0, 0 0 0, 2 0 0,
+                                                                 1 2 1, 0 0 0, 0 0 0"></CoordinateInterpolator>
+      <Transform translation='-4.45 -2 5.5'>
+        <Shape>
+          <IndexedTriangleStripSet index='0 1 2' solid='false'>
+            <Coordinate DEF="Coord" point='2 0 0, 1 2 1, 0 0 0'></Coordinate>
+            <ColorRGBA color='.9 .7 .8, 1 0 1 , 1 0 1'></ColorRGBA>
+          </IndexedTriangleStripSet>
+        </Shape>
+      </Transform>
+      <ROUTE fromNode="Time"fromField="fraction_changed"toNode="CoordInt"toField="set_fraction"></ROUTE>
+      <ROUTE fromNode="CoordInt"fromField="value_changed"toNode="Coord"toField="set_point"></ROUTE>
+      <!--Солнце-->
+      <Transform DEF="sun">
+      <Shape>
+        <Appearance>
+          <ImageTexture url="8k_sun.jpg">
+          </ImageTexture>
+          <Material>
+          </Material>
+        </Appearance>
+        <Sphere radius="1.5">
+        </Sphere>
+      </Shape>
+    </Transform>
+      <TimeSensor DEF="TS_sun"cycleInterval="20"loop="true"></TimeSensor>
+      <OrientationInterpolator DEF="OI_sun"key="0, 0.5, 1"keyValue="0 1 0 0, 0 1 0 3.14, 0 1 0 6.28"></OrientationInterpolator>
+      <ROUTE fromNode="TS_sun"fromField="fraction_changed"toNode="OI_sun"toField="set_fraction"></ROUTE>
+      <ROUTE fromNode="OI_sun"fromField="value_changed"toNode="sun"toField="set_rotation"></ROUTE>
+      <!--Меркурия-->
+      <Transform DEF="mercury" translation="-2.5 -1.4 3.4" center="0 0 0">
+        <Shape  >
+          <Appearance>
+            <ImageTexture url="mercury.jpg">
+            </ImageTexture> 
+            <Material>
+            </Material>
+          </Appearance>
+          <Sphere radius="0.5" >
+          </Sphere>
+        </Shape>
+      </Transform>
+      <TimeSensor DEF="TS_mer"cycleInterval="58"loop="true"></TimeSensor>
+      <OrientationInterpolator DEF="OI_mer"key="0, 0.5, 1"keyValue="0 1 0 0, 0 1 0 3.14, 0 1 0 6.28"></OrientationInterpolator>
+      <ROUTE fromNode="TS_mer"fromField="fraction_changed"toNode="OI_mer"toField="set_fraction"></ROUTE>
+      <ROUTE fromNode="OI_mer"fromField="value_changed"toNode="mercury"toField="set_rotation"></ROUTE>
+      <!--Венера-->
+      <Transform DEF="venus" translation="3.5 -0.5 4.5">
+        <Shape>
+          <Appearance>
+            <ImageTexture url="venus.jpg">
+            </ImageTexture> 
+            <Material>
+            </Material>
+          </Appearance>
+          <Sphere radius="0.55" >
+          </Sphere>
+        </Shape>
+      </Transform>
+      <TimeSensor DEF="TS_v"cycleInterval="243"loop="true"></TimeSensor>
+      <OrientationInterpolator DEF="OI_v"key="0, 0.5, 1"keyValue="0 1 0 0, 0 1 0 -3.14, 0 1 0 -6.28"></OrientationInterpolator>
+      <ROUTE fromNode="TS_v"fromField="fraction_changed"toNode="OI_v"toField="set_fraction"></ROUTE>
+      <ROUTE fromNode="OI_v"fromField="value_changed"toNode="venus"toField="set_rotation"></ROUTE>
+      <!--Земеля-->
+      <Transform DEF="earth" translation="1.5 -1.3 6.2" rotation="1 0 0 0.1"> 
+        <Shape>
+          <Appearance>
+            <ImageTexture url="earth.jpg">
+            </ImageTexture> 
+            <Material>
+            </Material>
+          </Appearance>
+          <Cylinder height="0.055" radius="0.6" >
+          </Cylinder>
+        </Shape>
+      </Transform>
+      <TimeSensor DEF="TS_e"cycleInterval="1"loop="true"></TimeSensor>
+      <OrientationInterpolator DEF="OI_e"key="0, 0.5, 1"keyValue="0 1 0 0, 0 1 0 3.14, 0 1 0 6.28"></OrientationInterpolator>
+      <ROUTE fromNode="TS_e"fromField="fraction_changed"toNode="OI_e"toField="set_fraction"></ROUTE>
+      <ROUTE fromNode="OI_e"fromField="value_changed"toNode="earth"toField="set_rotation"></ROUTE>
+    <!--Луна-->
+      <Transform DEF="moon" translation="0.75 -0.87 7" center="0.7 0.7 -0.7">
+        <Shape>
+          <Appearance>
+            <ImageTexture url="moon.jpg">
+            </ImageTexture> 
+            <Material>
+            </Material>
+          </Appearance>
+          <Sphere radius="0.15">
+          </Sphere>
+        </Shape>
+      </Transform>
+      <TimeSensor DEF="TS_m"cycleInterval="27.03"loop="true"></TimeSensor>
+      <OrientationInterpolator DEF="OI_m"key="0, 0.5, 1"keyValue="0 1 0 0, 0 1 0 3.14, 0 1 0 6.28"></OrientationInterpolator>
+      <ROUTE fromNode="TS_m"fromField="fraction_changed"toNode="OI_m"toField="set_fraction"></ROUTE>
+      <ROUTE fromNode="OI_m"fromField="value_changed"toNode="moon"toField="set_rotation"></ROUTE>
+      <!--Марс-->
+      <Transform DEF="mars" translation="-10 -1.1 -3.2">
+        <Shape>
+          <Appearance>
+            <ImageTexture url="mars.jpg">
+            </ImageTexture> 
+            <Material>
+            </Material>
+          </Appearance>
+          <Sphere radius="0.7">
+          </Sphere>
+        </Shape>
+      </Transform>
+      <TimeSensor DEF="TS_mars"cycleInterval="1.6"loop="true"></TimeSensor>
+      <OrientationInterpolator DEF="OI_mars"key="0, 0.5, 1"keyValue="0 1 0 0, 0 1 0 3.14, 0 1 0 6.28"></OrientationInterpolator>
+      <ROUTE fromNode="TS_mars"fromField="fraction_changed"toNode="OI_mars"toField="set_fraction"></ROUTE>
+      <ROUTE fromNode="OI_mars"fromField="value_changed"toNode="mars"toField="set_rotation"></ROUTE>
+      <!--Жупитер-->
+      <Transform DEF="jupiter" translation="10.2 3.4 -4.8">
+        <Shape>
+          <Appearance>
+            <ImageTexture url="jupiter.jpg">
+            </ImageTexture> 
+            <Material>
+            </Material>
+          </Appearance>
+          <Sphere radius="1.1">
+          </Sphere>
+        </Shape>
+      </Transform>
+      <TimeSensor DEF="TS_j"cycleInterval="0.416"loop="true"></TimeSensor>
+      <OrientationInterpolator DEF="OI_j"key="0, 0.5, 1"keyValue="0 1 0 0, 0 1 0 3.14, 0 1 0 6.28"></OrientationInterpolator>
+      <ROUTE fromNode="TS_j"fromField="fraction_changed"toNode="OI_j"toField="set_fraction"></ROUTE>
+      <ROUTE fromNode="OI_j"fromField="value_changed"toNode="jupiter"toField="set_rotation"></ROUTE>
+      <!--Сотурн-->
+      <Transform translation="-6 1.3 -8.8" rotation="1 0 0 0.3">
+        <Transform rotation="1 0 0 0.4" DEF="saturn">
+        <Shape>
+          <Appearance>
+            <ImageTexture url="saturn.jpg">
+            </ImageTexture>
+            <Material>
+            </Material>
+          </Appearance>
+          <Sphere radius="1.2">
+          </Sphere>
+        </Shape>
+      </Transform>
+        <!--Колечько Сотурна-->
+          <Transform scale="1 1 0.01" rotation="1 0 0 -1.2">
+            <Shape>
+              <Appearance>
+                <ImageTexture url="ringsaturn.png">
+                </ImageTexture> 
+                <TextureTransform translation="-1.2 0" >
+                </TextureTransform>
+                <Material>
+                </Material>
+              </Appearance>
+              <Torus innerRadius="0.5" outerRadius="2">
+              </Torus>
+            </Shape>
+        </Transform>
+      </Transform>
+      <TimeSensor DEF="TS_s"cycleInterval="0.437"loop="true"></TimeSensor>
+      <OrientationInterpolator DEF="OI_s"key="0, 0.5, 1"keyValue="0 0.7 0 0, 0 0.7 0 3.14, 0 0.7 0 6.28"></OrientationInterpolator>
+      <ROUTE fromNode="TS_s"fromField="fraction_changed"toNode="OI_s"toField="set_fraction"></ROUTE>
+      <ROUTE fromNode="OI_s"fromField="value_changed"toNode="saturn"toField="set_rotation"></ROUTE>
+      <!--Юранус-->
+      <Transform DEF="uranus" translation="5 3.9 -10">
+        <Shape>
+          <Appearance>
+            <ImageTexture url="uranus.jpg">
+            </ImageTexture> 
+            <Material>
+            </Material>
+          </Appearance>
+          <Sphere radius="0.8">
+          </Sphere>
+        </Shape>
+      </Transform>
+      <TimeSensor DEF="TS_u"cycleInterval="0.71"loop="true"></TimeSensor>
+      <OrientationInterpolator DEF="OI_u"key="0, 0.5, 1"keyValue="0 0.7 0 0, 0 0.7 0 3.14, 0 0.7 0 6.28"></OrientationInterpolator>
+      <ROUTE fromNode="TS_u"fromField="fraction_changed"toNode="OI_u"toField="set_fraction"></ROUTE>
+      <ROUTE fromNode="OI_u"fromField="value_changed"toNode="uranus"toField="set_rotation"></ROUTE>
+      <!--Нетун-->
+      <Transform DEF="neptun" translation="1 3.5 -11.7">
+        <Shape>
+          <Appearance>
+            <ImageTexture url="neptun.jpg">
+            </ImageTexture>
+            <Material>
+            </Material>
+          </Appearance>
+          <Sphere radius="0.8">
+          </Sphere>
+        </Shape>
+      </Transform>
+      <TimeSensor DEF="TS_n"cycleInterval="0.66"loop="true"></TimeSensor>
+      <OrientationInterpolator DEF="OI_n"key="0, 0.5, 1"keyValue="0 0.7 0 0, 0 0.7 0 3.14, 0 0.7 0 6.28"></OrientationInterpolator>
+      <ROUTE fromNode="TS_n"fromField="fraction_changed"toNode="OI_n"toField="set_fraction"></ROUTE>
+      <ROUTE fromNode="OI_n"fromField="value_changed"toNode="neptun"toField="set_rotation"></ROUTE>
+      <!--Колечько-->
+      <Transform  rotation="0 0 1 0.2">
+      <Transform scale="4 1 3" rotation="1 0 0 0.25">
+        <Inline url="orbit.x3d"></Inline>
+      </Transform>
+    </Transform>
+      <!--Колечько-->
+      <Transform  rotation="0 0 1 0.2">
+      <Transform scale="5.2 1 3.9" rotation="1 0 0 0.25">
+        <Inline url="orbit.x3d"></Inline>
+      </Transform>
+    </Transform>
+      <!--Колечько-->
+      <Transform  rotation="0 0 1 0.2">
+      <Transform scale="6.4 1 4.8" rotation="1 0 0 0.25">
+          <Inline url="orbit.x3d"></Inline>
+      </Transform>
+    </Transform>
+      <!--Колечько-->
+      <Transform  rotation="0 0 1 0.2">
+      <Transform scale="7.6 1 5.7" rotation="1 0 0 0.25">
+        <Inline url="orbit.x3d"></Inline>
+      </Transform>
+    </Transform>
+      <!--Колечько-->
+      <Transform  rotation="0 0 1 0.2">
+      <Transform scale="8.8 1 6.6" rotation="1 0 0 0.25">
+        <Inline url="orbit.x3d"></Inline>
+      </Transform>
+    </Transform>
+      <!--Колечько-->
+      <Transform  rotation="0 0 1 0.2">
+      <Transform scale="10 1 7.5" rotation="1 0 0 0.25">
+        <Inline url="orbit.x3d"></Inline>
+      </Transform>
+    </Transform>
+      <!--Колечько-->
+      <Transform  rotation="0 0 1 0.2">
+      <Transform scale="11.2 1 8.4" rotation="1 0 0 0.25">
+        <Inline url="orbit.x3d"></Inline>
+      </Transform>
+    </Transform>
+      <!--Колечько-->
+      <Transform  rotation="0 0 1 0.2">
+      <Transform scale="12.4 1 9.6" rotation="1 0 0 0.25">
+        <Inline url="orbit.x3d"></Inline>
+      </Transform>
+    </Transform>
+    </Scene>
+  </X3D>
+</body>
 </html>
+
